# lastfmbucket-bot

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: admin.py  ai.py  bot.py  callbacks.py  commands.py  config.py  db.py  lastfm.py  responses.py  services.py
src/migrations/: 001_add_chat_type_to_chat.py  002_remove_old_commandlog_columns.py
